force-app/main/default/objects/FixMyStreet__c/FixMyStreet__c.object-meta.xml
<CustomObject>
    <description>FixMyStreet Requests</description>
    <label>FixMyStreet</label>
    <nameField>
        <displayFormat>FMS-RCC-{00000}</displayFormat>
        <label>FixMyStreet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FixMyStreet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>