force-app/main/default/objects/FixMyStreet__c/fields/agency_responsible__c.field-meta.xml
<CustomField>
    <fullName>agency_responsible__c</fullName>
    <label>agency_responsible</label>
    <length>40</length>
    <type>Text</type>
</CustomField>