force-app/main/default/objects/FixMyStreet__c/fields/agency_sent_datetime__c.field-meta.xml
<CustomField>
    <fullName>agency_sent_datetime__c</fullName>
    <inlineHelpText>DateTime of fixmystreet entry format 2017-11-27T20:30:11.837838+00:00</inlineHelpText>
    <label>Agency Sent Date Stamp</label>
    <type>DateTime</type>
</CustomField>