force-app/main/default/objects/FixMyStreet__c/fields/All_Comments__c.field-meta.xml
<CustomField>
    <fullName>All_Comments__c</fullName>
    <label>All Comments</label>
    <summaryForeignKey>FixMyStreet_Comments__c.FixMyStreet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>