force-app/main/default/objects/FixMyStreet__c/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <formula>Case__r.Owner:Queue.QueueName</formula>
    <label>CaseOwner</label>
    <type>Text</type>
</CustomField>