force-app/main/default/objects/FixMyStreet__c/fields/ConfirmReference__c.field-meta.xml
<CustomField>
    <fullName>ConfirmReference__c</fullName>
    <label>ConfirmReference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>