force-app/main/default/objects/FixMyStreet__c/fields/Contractor_Description__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Carcases (Not road kill)</fullName>
            </value>
            <value>
                <fullName>Green Waste</fullName>
            </value>
            <value>
                <fullName>Vehicle Parts</fullName>
            </value>
            <value>
                <fullName>White Goods</fullName>
            </value>
            <value>
                <fullName>Other Electrical</fullName>
            </value>
            <value>
                <fullName>Tyres</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Construction/Demi/Excav</fullName>
            </value>
            <value>
                <fullName>Black Bags Commercial</fullName>
            </value>
            <value>
                <fullName>Black Bags Household</fullName>
            </value>
            <value>
                <fullName>Chemical Drums,Oil, Fuel</fullName>
            </value>
            <value>
                <fullName>Other Household Waste</fullName>
            </value>
            <value>
                <fullName>Other Commercial Waste</fullName>
            </value>
            <value>
                <fullName>Other - Unidentified</fullName>
            </value>
            <value>
                <fullName>--Please Enter--</fullName>
                <isActive>false</isActive>
                <label>--Please Enter--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>