force-app/main/default/objects/FixMyStreet__c/fields/Contractor_Location__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highway</fullName>
            </value>
            <value>
                <fullName>Footpath/Bridleway</fullName>
            </value>
            <value>
                <fullName>Railway</fullName>
            </value>
            <value>
                <fullName>Council Land</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Commercial/Industrial</fullName>
            </value>
            <value>
                <fullName>Water Course/Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>--Please Enter--</fullName>
                <isActive>false</isActive>
                <label>--Please Enter--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>