force-app/main/default/objects/FixMyStreet__c/fields/Contractor_Size__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Black Bag</fullName>
            </value>
            <value>
                <fullName>Other Single item</fullName>
            </value>
            <value>
                <fullName>Car Boot load or Less</fullName>
            </value>
            <value>
                <fullName>Small Van Load</fullName>
            </value>
            <value>
                <fullName>Transit Van Load</fullName>
            </value>
            <value>
                <fullName>Tipper Truck Load</fullName>
            </value>
            <value>
                <fullName>Significant/Multiple Loads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>