force-app/main/default/objects/FixMyStreet__c/fields/Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed__c</fullName>
    <formula>If(LastModifiedDate -  CreatedDate &lt;1, &quot;Less 1 Day&quot;,
 If(LastModifiedDate -  CreatedDate &lt;10, &quot;Less 10 Days&quot;,
  If(LastModifiedDate -  CreatedDate &lt;30, &quot;Less 30 Days&quot;, &quot;More 30&quot;)
 )
)</formula>
    <label>Days Elapsed</label>
    <type>Text</type>
</CustomField>