force-app/main/default/objects/FixMyStreet__c/fields/detail__c.field-meta.xml
<CustomField>
    <fullName>detail__c</fullName>
    <label>detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>