force-app/main/default/objects/FixMyStreet__c/fields/Extends_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Extends_Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>