force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC01_Highways_Defects__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC01_Highways_Defects__c</fullName>
    <description>Condition of road</description>
    <label>Highway Defects</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pothole</fullName>
            </value>
            <value>
                <fullName>Obstruction</fullName>
            </value>
            <value>
                <fullName>Cracked or Damaged</fullName>
            </value>
            <value>
                <fullName>Mud on Road</fullName>
            </value>
            <value>
                <fullName>Spill, Oil or Diesel</fullName>
            </value>
            <value>
                <fullName>Damaged Speed Bumps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>