force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC02_Grit_Bins__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC02_Grit_Bins__c</fullName>
    <label>Winter Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grit Bin – Damaged</fullName>
                <default>true</default>
                <label>Grit Bin – Damaged</label>
            </value>
            <value>
                <fullName>Grit Bin – Empty</fullName>
            </value>
            <value>
                <fullName>Grit Bin  - Missing</fullName>
            </value>
            <value>
                <fullName>Icy Footpath</fullName>
            </value>
            <value>
                <fullName>Icy Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>