force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC03_Gully__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC03_Gully__c</fullName>
    <description>Gully or Manhole status</description>
    <label>Gully or Manhole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Broken Cover</fullName>
            </value>
            <value>
                <fullName>Missing Cover</fullName>
            </value>
            <value>
                <fullName>Raised or Sunken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>