force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC04_TreesVegetation__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC04_TreesVegetation__c</fullName>
    <description>Trees/Vegetation issue</description>
    <label>Trees/Vegetation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fallen Tree</fullName>
            </value>
            <value>
                <fullName>Overgrown or Overhanging</fullName>
            </value>
            <value>
                <fullName>Restricted Visibility</fullName>
            </value>
            <value>
                <fullName>Roots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>