force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC05_Footway__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC05_Footway__c</fullName>
    <label>Footway or Footpath</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged or Cracked</fullName>
            </value>
            <value>
                <fullName>Pothole</fullName>
            </value>
            <value>
                <fullName>Slabs uneven or missing</fullName>
            </value>
            <value>
                <fullName>Failed Reinstatement</fullName>
            </value>
            <value>
                <fullName>Obstruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>