force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC06_Retaining_Wall__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC06_Retaining_Wall__c</fullName>
    <label>Retaining Wall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage to Structure</fullName>
            </value>
            <value>
                <fullName>Vehicle Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>