force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC07_Road_Signage__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC07_Road_Signage__c</fullName>
    <label>Road Signage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Obscured by Vegetation</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Obscured or Dirty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>