force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC08_Street_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC08_Street_Furniture__c</fullName>
    <label>Street Furniture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Benches</fullName>
            </value>
            <value>
                <fullName>Damaged Bollard</fullName>
            </value>
            <value>
                <fullName>Damaged Cycle Stand</fullName>
            </value>
            <value>
                <fullName>Damaged Railings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>