force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC09_Street_Name_Plate__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC09_Street_Name_Plate__c</fullName>
    <label>Street Name Plate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>