force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC11_How_long__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC11_How_long__c</fullName>
    <label>How long has vehicle been at location</label>
    <type>TextArea</type>
</CustomField>