force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC11_Vehicle_Colour__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC11_Vehicle_Colour__c</fullName>
    <label>Vehicle Colour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>