force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC11_Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC11_Vehicle_Condition__c</fullName>
    <description>Condition of the car</description>
    <label>Vehicle Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Condition</fullName>
            </value>
            <value>
                <fullName>Average Condition</fullName>
            </value>
            <value>
                <fullName>Poor Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>