force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC11_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC11_Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>