force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC11_Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC11_Vehicle_Registration__c</fullName>
    <label>Vehicle Registration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>