force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC12_Fly_Tipping_Description__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC12_Fly_Tipping_Description__c</fullName>
    <label>What has been left</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>