force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC13_Street_Light_Issue__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC13_Street_Light_Issue__c</fullName>
    <label>Street Light Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Report</fullName>
            </value>
            <value>
                <fullName>Lamp Out</fullName>
            </value>
            <value>
                <fullName>Lamp Flickering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>