force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC13_Street_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC13_Street_Lighting__c</fullName>
    <label>Lamp Column Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>