force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC14_What_Type_of_Animal__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC14_What_Type_of_Animal__c</fullName>
    <label>What type of animal</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>