force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC15_Discarded_Syringes__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC15_Discarded_Syringes__c</fullName>
    <label>Are the Syringes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>Uncapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>