force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC15_How_Many_Syringes__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC15_How_Many_Syringes__c</fullName>
    <label>How Many Syringes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>