force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC16_How_long__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC16_How_long__c</fullName>
    <label>How long has the post been there</label>
    <length>255</length>
    <type>Text</type>
</CustomField>