force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC17_Amount_of_Rubbish__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC17_Amount_of_Rubbish__c</fullName>
    <label>Amount of Rubbish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>