force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC17_Location__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC17_Location__c</fullName>
    <label>Location</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>