force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC17_who_responsible__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC17_who_responsible__c</fullName>
    <label>Do you know who is responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>