force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC18_Describe_Graffiti__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC18_Describe_Graffiti__c</fullName>
    <label>Please describe the graffiti</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>