force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC18_Graffiti_Type__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC18_Graffiti_Type__c</fullName>
    <label>Graffiti Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graphic</fullName>
            </value>
            <value>
                <fullName>Obscene</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Racial</fullName>
            </value>
            <value>
                <fullName>Tagging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>