force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC19_maintained_by_the_Council__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC19_maintained_by_the_Council__c</fullName>
    <label>Is the grass maintained by the Council</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don’t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>