force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC20_causing_problem__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC20_causing_problem__c</fullName>
    <label>Is it causing significant problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>