force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC20_path_or_road__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC20_path_or_road__c</fullName>
    <label>Is problem on path or road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>