force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC20_Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC20_Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broken Glass</fullName>
            </value>
            <value>
                <fullName>Leaves</fullName>
            </value>
            <value>
                <fullName>Litter Picking</fullName>
            </value>
            <value>
                <fullName>Overflowing Bins</fullName>
            </value>
            <value>
                <fullName>Refuse/Recycling Spills</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>