force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC21_Parking_Issue__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC21_Parking_Issue__c</fullName>
    <label>Parking Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obstructive/Verge parking</fullName>
            </value>
            <value>
                <fullName>Request new restrictions</fullName>
            </value>
            <value>
                <fullName>Pay and Display machine damaged</fullName>
            </value>
            <value>
                <fullName>Pay and Display machine not working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>