force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC22_Rights_of_Way_Issue__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC22_Rights_of_Way_Issue__c</fullName>
    <label>Rights of Way Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Damaged/Missing</fullName>
            </value>
            <value>
                <fullName>Gate</fullName>
            </value>
            <value>
                <fullName>Stile</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Signs or way marking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>