force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC23_Kerb_Issue__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC23_Kerb_Issue__c</fullName>
    <label>Kerb Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Loose</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Dropped Kerb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>