force-app/main/default/objects/FixMyStreet__c/fields/Extends_RC24_Traffic_Signals_Issue__c.field-meta.xml
<CustomField>
    <fullName>Extends_RC24_Traffic_Signals_Issue__c</fullName>
    <label>Traffic Signals Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged or exposed wiring</fullName>
            </value>
            <value>
                <fullName>Lamp or bulb failure</fullName>
            </value>
            <value>
                <fullName>Signal Failure</fullName>
            </value>
            <value>
                <fullName>Request Timing Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>