force-app/main/default/objects/FixMyStreet__c/fields/FixMyStreetURL__c.field-meta.xml
<CustomField>
    <fullName>FixMyStreetURL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.fixmystreet.com/report/&quot;&amp;  TEXT(service_request_id__c) , &quot;https://www.fixmystreet.com/report/&quot;&amp;  TEXT(service_request_id__c), &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FixMyStreetURL</label>
    <type>Text</type>
</CustomField>