force-app/main/default/objects/FixMyStreet__c/fields/interface_used__c.field-meta.xml
<CustomField>
    <fullName>interface_used__c</fullName>
    <inlineHelpText>How the FixMyStreet came to us</inlineHelpText>
    <label>Interface Used</label>
    <length>20</length>
    <type>Text</type>
</CustomField>