force-app/main/default/objects/FixMyStreet__c/fields/lat__c.field-meta.xml
<CustomField>
    <fullName>lat__c</fullName>
    <description>Latitude</description>
    <label>lat</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>