force-app/main/default/objects/FixMyStreet__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>CST Described Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>