force-app/main/default/objects/FixMyStreet__c/fields/long__c.field-meta.xml
<CustomField>
    <fullName>long__c</fullName>
    <description>Longitude</description>
    <label>long</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>