force-app/main/default/objects/FixMyStreet__c/fields/New_update_Comments__c.field-meta.xml
<CustomField>
    <fullName>New_update_Comments__c</fullName>
    <label>New update Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>