force-app/main/default/objects/FixMyStreet__c/fields/Northing__c.field-meta.xml
<CustomField>
    <fullName>Northing__c</fullName>
    <label>Northing</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>