force-app/main/default/objects/FixMyStreet__c/fields/Number_of_Photos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Photos__c</fullName>
    <label>Number of Photos</label>
    <summaryForeignKey>FixMyStreet_Photo__c.FixMyStreet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>