force-app/main/default/objects/FixMyStreet__c/fields/RCC_Comments__c.field-meta.xml
<CustomField>
    <fullName>RCC_Comments__c</fullName>
    <label>RCC Comments</label>
    <summaryFilterItems>
        <field>FixMyStreet_Comments__c.Comment_Id__c</field>
        <operation>equals</operation>
        <value>Internal Comment</value>
    </summaryFilterItems>
    <summaryForeignKey>FixMyStreet_Comments__c.FixMyStreet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>