force-app/main/default/objects/FixMyStreet__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <formula>IF( service_request_id__c &gt;0, &#39;FixMyStreet&#39;, &#39;CST&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported By</label>
    <type>Text</type>
</CustomField>