force-app/main/default/objects/FixMyStreet__c/fields/requested_datetime__c.field-meta.xml
<CustomField>
    <fullName>requested_datetime__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>