force-app/main/default/objects/FixMyStreet__c/fields/requestor_name__c.field-meta.xml
<CustomField>
    <fullName>requestor_name__c</fullName>
    <label>Requestor Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>