force-app/main/default/objects/FixMyStreet__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Area</label>
    <referenceTo>FixMyStreetCategories__c</referenceTo>
    <relationshipLabel>FixMyStreet</relationshipLabel>
    <relationshipName>FixMyStreet</relationshipName>
    <type>Lookup</type>
</CustomField>