force-app/main/default/objects/FixMyStreet__c/fields/service_request_id__c.field-meta.xml
<CustomField>
    <fullName>service_request_id__c</fullName>
    <label>Service request id</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>