force-app/main/default/objects/FixMyStreet__c/fields/ServiceArea__c.field-meta.xml
<CustomField>
    <fullName>ServiceArea__c</fullName>
    <formula>if( ISPICKVAL(Service_Area__r.Internal_Service_Area__c,&quot;Street Scene&quot;),&quot;Street Scene&quot;,
if( ISPICKVAL(Service_Area__r.Internal_Service_Area__c,&quot;Highways&quot;),&quot;Highways&quot;,
if( ISPICKVAL(Service_Area__r.Internal_Service_Area__c,&quot;Waste&quot;),&quot;Waste&quot;
,&quot;Error&quot;)))</formula>
    <label>ServiceArea</label>
    <type>Text</type>
</CustomField>