force-app/main/default/objects/FixMyStreet__c/fields/ServiceReqId__c.field-meta.xml
<CustomField>
    <fullName>ServiceReqId__c</fullName>
    <formula>TEXT( service_request_id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServiceReqId</label>
    <type>Text</type>
</CustomField>