force-app/main/default/objects/FixMyStreet__c/fields/SiteCode__c.field-meta.xml
<CustomField>
    <fullName>SiteCode__c</fullName>
    <label>SiteCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>