force-app/main/default/objects/FixMyStreet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Action scheduled</fullName>
            </value>
            <value>
                <fullName>No further action</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not responsible</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Internal referral</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>