force-app/main/default/objects/FixMyStreet__c/fields/tempStatus__c.field-meta.xml
<CustomField>
    <fullName>tempStatus__c</fullName>
    <label>tempStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>