force-app/main/default/objects/FixMyStreet__c/fields/Update_Comments__c.field-meta.xml
<CustomField>
    <fullName>Update_Comments__c</fullName>
    <label>Update Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>