force-app/main/default/objects/FixMyStreet__c/fields/Update_Comments_Id__c.field-meta.xml
<CustomField>
    <fullName>Update_Comments_Id__c</fullName>
    <label>Update Comments Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>