force-app/main/default/objects/FixMyStreet__c/fields/Update_FixMyStreet__c.field-meta.xml
<CustomField>
    <fullName>Update_FixMyStreet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Setting this will ensure that changes to fields is sent to FixMyStreet</inlineHelpText>
    <label>Update FixMyStreet</label>
    <type>Checkbox</type>
</CustomField>