force-app/main/default/objects/FixMyStreet__c/fields/updated_datetime__c.field-meta.xml
<CustomField>
    <fullName>updated_datetime__c</fullName>
    <label>Updated datetime</label>
    <type>DateTime</type>
</CustomField>